--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
 
     <application
-        android:name=".QiblaProApp"
+        android:name=".app.QiblaProApp"
         android:allowBackup="true"
         android:supportsRtl="true"
         android:label="@string/app_name"
@@ -20,7 +20,7 @@
             android:value="PUT_YOUR_MAPS_KEY_HERE"/>
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
