--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ coroutines = "1.10.2"
 location = "21.3.0"
 maps = "19.2.0"
 mapsCompose = "6.12.2"
+mapsComposeUtils = "7.0.0"
 
 splashscreen = "1.2.0"
 window = "1.5.1"
@@ -59,6 +60,7 @@ kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "location" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "maps" }
 maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "mapsCompose" }
+maps-compose-utils = { group = "com.google.maps.android", name = "maps-compose-utils", version.ref = "mapsComposeUtils" }
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxJunit" }
