--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.13.1"
 kotlin = "2.2.21"
 
 coreKtx = "1.13.1"
+appcompat = "1.6.1"
 activityCompose = "1.9.3"
 lifecycle = "2.8.0"
 composeBom = "2025.12.00"
@@ -27,6 +28,7 @@ espresso = "3.5.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 
